fixed navbar added with collapsable menu below medium screen size

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 /* Global styles ============= */
-body {
+/*body {
   margin-top: 40px;
-}
+}*/
+
 .hero {
     background-color: black;
+    margin-top: 150px;
+}
+.navbar-collapse {
+    justify-content: end;
 }
 
 .profile-image {
@@ -14,13 +19,25 @@ body {
   border: 3px black double;
   padding: 1.2%;
 }
-.profile {
-  
-}
-/*Screen size 900px*/
-@media (max-width: 900px) {
+
+/*Screen size 1300px*/
+@media (max-width: 1300px) {
   .profile-image {
-    min-width: 170.62px;
-    min-height: 161.41;
+    min-width: 253.93px;
+    min-height: 300px;
   }
 }
+/*Screen size 435px*/
+@media (max-width: 435px) {
+    .profile-image {
+      min-width: 167.59px;
+      min-height: 198px;
+    }
+  }
+/*Screen size 305px*/
+@media (max-width: 305px) {
+    .profile-image {
+      min-width: 126.96px;
+      min-height: 150px;
+    }
+  }
